# WSysMon

./: .gitignore  CMakeLists.txt  LICENSE  README.md  wsysmon.desktop
.github/workflows/: cmake.yml
src/: main.cpp
src/api/: AutostartApi.h  DiskApi.h  GPUApi.h  HwMonApi.h  NetworkApi.h  ProcessesApi.h  ServicesApi.h  SystemInfoApi.h
src/api/linux/: AutostartApi.cpp  DiskApi.cpp  GPUApi.cpp  HwMonApi.cpp  NetworkApi.cpp  ProcessesApi.cpp  ServicesApi.cpp  SystemInfoApi.cpp
src/api/linux/gpu/: DrmGpuApi.cpp  DrmGpuApi.h  NvGpuApi.cpp  NvGpuApi.h  nvml.h  nvml_hook_funcs.inl
src/api/macos/: AutostartApi.cpp  DiskApi.cpp  GPUApi.cpp  HwMonApi.cpp  NetworkApi.cpp  ProcessesApi.cpp  ServicesApi.cpp  SystemInfoApi.cpp
src/api/process/: ProcessManager.cpp  ProcessManager.h  ProcessNode.cpp  ProcessNode.h
src/storage/: AppSettings.cpp  AppSettings.h
src/ui/: DetailsWindow.cpp  DetailsWindow.h  MainWindow.cpp  MainWindow.h
src/ui/views/: AutostartView.cpp  AutostartView.h  PerformanceView.cpp  PerformanceView.h  ProcessesView.cpp  ProcessesView.h  ServicesView.cpp  ServicesView.h  View.h
src/ui/views/performance/: PerformanceCPUView.cpp  PerformanceCPUView.h  PerformanceDiskView.cpp  PerformanceDiskView.h  PerformanceGPUView.cpp  PerformanceGPUView.h  PerformanceNetworkView.cpp  PerformanceNetworkView.h  PerformancePSUView.cpp  PerformancePSUView.h  PerformanceRAMView.cpp  PerformanceRAMView.h  PerformanceSubView.h
src/ui/widgets/: GraphWidget.cpp  GraphWidget.h  PerformanceButton.cpp  PerformanceButton.h
src/utils/: CGUtils.cpp  CGUtils.h  DispatcherThread.cpp  DispatcherThread.h  IOUtils.h  UnitConverter.cpp  UnitConverter.h  Utils.h  X11Utils.cpp
src/utils/linux/: CGUtils.cpp  CGUtils.h  X11Utils.h
src/utils/macos/: MacUtils.h  MacUtils.mm
